# kvm-cloning-over-ssh

./: .coverage  .coveragerc  .flake8  .gitignore  .markdownlintrc  CONTRIBUTING.md  IDEMPOTENCY_ANALYSIS.md  Makefile  README.md  REAL_WORLD_IMPROVEMENTS.md  SECURITY_FIXES_REPORT.md  TODO.md  kvm_clone.py  mkdocs.yml  pyproject.toml  pytest.ini  technical_spec.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  IDEMPOTENCY_ANALYSIS.md  PHASE4_DATA_SAFETY.md  README.md  REAL_WORLD_IMPROVEMENTS.md  SECURITY_FIXES_REPORT.md  TRANSFER_METHODS.md  api.md  api_spec.md  index.md  technical_spec.md
docs/specs/: functional_spec.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/search/: search_index.json
site/specs/functional_spec/: index.html
src/kvm_clone/: __init__.py  cli.py  client.py  cloner.py  config.py  exceptions.py  libvirt_wrapper.py  logging.py  models.py  security.py  sync.py  transaction.py  transport.py
tests/: README.md  __init__.py  conftest.py  test_security_fixes.py
tests/integration/: test_end_to_end.py
tests/spec/: test_conformance.py
tests/unit/: test_config.py  test_core_functionality.py  test_exceptions.py  test_idempotent.py  test_logging.py  test_models.py  test_security.py  test_transaction.py  test_transfer_methods.py
